<resources>
    <string name="app_name">Money Manager</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="new_here_sign_up_now">New here? Sign Up Now</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="logout">logout</string>
    <string name="additional_details">Additional Details</string>
    <string name="occupation">Occupation</string>
    <string name="salary">Salary</string>
    <string name="address">Address</string>
    <string name="set_info">Set Info</string>
    <string name="skip">Skip</string>
    <string name="enter_your_spending_budget">Enter your spending budget</string>
    <string name="set_budget">Set Budget</string>
    <string name="monthly_expenses">Monthly Expenses</string>
    <string name="daily_expenses">Daily Expenses</string>
    <string name="set_monthly_expenses">Set Monthly Expenses</string>
    <string name="set_daily_expenses">Set Daily Expenses</string>
    <string name="area_of_expendture">Area of Expendture</string>
    <string name="money_spent">Money Spent</string>
    <string name="set_new_expense">Set New Expense</string>
    <string name="month_name">Month Name</string>
    <string name="monthly_amount">Monthly Amount</string>
    <string name="set_limit">Set limit</string>
    <string name="profile">Profile</string>
    <string name="back_to_timeline">Back to TImeline</string>
</resources>
