<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical"
    tools:context=".AccountDetailsActivity">

    <TextView
        android:text="@string/additional_details"
        android:textSize="30sp"
        android:layout_marginBottom="20dp"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/occupation"
        android:hint="@string/occupation"
        android:inputType="text"
        android:textSize="22sp"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/salary"
        android:hint="@string/salary"
        android:inputType="numberDecimal"
        android:textSize="22sp"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/Address"
        android:hint="@string/address"
        android:inputType="text"
        android:textSize="22sp"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/set_attributes"
        android:text="@string/set_info"
        android:layout_gravity="center"
        android:textSize="22sp"
        android:layout_width="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/skip_attributes"
        android:text="@string/skip"
        android:layout_gravity="center"
        android:textSize="22sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>