<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".LogInActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="42sp"
        android:layout_marginBottom="16dp"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/EmailField"
        android:textSize="22sp"
        android:hint="@string/email_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="16dp"
        />

    <EditText
        android:id="@+id/PasswordField"
        android:textSize="22sp"
        android:hint="@string/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginBottom="16dp"
        />
    <Button
        android:id="@+id/LogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="22sp"
        android:layout_marginBottom="16dp"
        android:layout_gravity="center"/>
    <TextView
        android:text="@string/new_here_sign_up_now"
        android:textSize="22sp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/GotoSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="22sp"
        android:layout_marginBottom="16dp"
        android:layout_gravity="center"/>


</LinearLayout>