<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MoneySaverActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_gravity="center"
        android:layout_marginBottom="200dp"
        android:textSize="42sp"/>

    <Button
        android:id="@+id/monthly_expenses"
        android:layout_width="match_parent"
        android:text="@string/monthly_expenses"
        android:textSize="22sp"
        android:layout_marginBottom="15dp"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/daily_expenses"
        android:text="@string/daily_expenses"
        android:textSize="22sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"/>
    <Button
        android:id="@+id/set_daily_expenses"
        android:text="@string/set_daily_expenses"
        android:textSize="22sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"/>
    <Button
        android:id="@+id/set_monthly_expenses"
        android:text="@string/set_monthly_expenses"
        android:textSize="22sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"/>


</LinearLayout>