<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".SetMonthlyExpenseActivity">
    <TextView
        android:text="@string/set_monthly_expenses"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:textSize="42sp"
        android:layout_marginBottom="200dp"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/monthly_limit"
        android:hint="@string/month_name"
        android:layout_width="match_parent"
        android:textSize="22sp"
        android:inputType="text"
        android:layout_marginBottom="15dp"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/monthly_amount"
        android:hint="@string/monthly_amount"
        android:layout_width="match_parent"
        android:textSize="22sp"
        android:inputType="numberDecimal"
        android:layout_marginBottom="15dp"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/monthly_amount_setter"
        android:text="@string/set_limit"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:textSize="22sp"
        android:layout_height="wrap_content"/>

</LinearLayout>